# Contact-Finder

./: .env.example  .gitignore  ABOUT.md  APPROACH.md  CLEVER.md  PLAN.md  PRD.md  README.md  contact_finder_test_dataset.csv  problem.md  pyproject.toml  requirements.txt  spec.md
src/contact_finder/: __main__.py  agent.py  agent_fast.py  cli.py  config.py  entity_resolution.py  groq_client.py  http_client.py  models.py  normalizer.py  pii_guard.py  pipeline.py  reporter.py  scorer.py  system_prompt.py
src/contact_finder/sources/: __init__.py  base.py  maps_search.py  mx_verify.py  normalize_company.py  opencorporates.py  secretary_of_state.py  wayback.py  web_search.py  website_contact.py  website_entity_resolver.py  whois_lookup.py  yellowpages.py  yelp.py
tests/: test_agent.py  test_entity_resolution.py  test_normalizer.py  test_pii_guard.py  test_scorer.py
